My First Web Development Project - Inn Progress

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <div class="footer-content">
             <div class="list">
                 <ul>
-                    <li><a href="index.php">Home</a></li>
-                    <li><a href="contact_us.html">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contact_us.php">Contact Us</a></li>
                     <li><a href="privacy.php">Privacy Policy</a></li>
                     <li><a href="terms.php">Term And Conditions</a></li>
                     <li>Tesla 2023 &copy;</li>
